--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,9 @@ jobs:
     vmImage: 'Ubuntu 16.04'
   strategy:
     matrix:
-      Python35:
-        python.version: '3.5'
+      #Azure Functions Python preview doesn't support 3.5
+      #Python35:
+      #  python.version: '3.5'
       Python36:
         python.version: '3.6'
       Python37:
